# TB

./: CMakeLists.txt  README.md  main.cpp  shared_functions.cmake  tests_main.cpp
booking_client/: BookingClient.cpp  BookingClient.h  CMakeLists.txt  ModulesKeeper.cpp  ModulesKeeper.h  main.cpp
booking_client/controllers/: MoviesModelController.cpp  MoviesModelController.h  StackViewController.cpp  StackViewController.h  TheatersModelController.cpp  TheatersModelController.h  TicketsModelController.cpp  TicketsModelController.h
booking_client/network/: Client.cpp  Client.h
booking_client/qml/: AppSettings.qml  MoviesScreen.qml  TheatersScreen.qml  TicketsScreen.qml  main.qml
booking_client/qml/templates/: BasicButton.qml  BasicScreen.qml
ticket_server/: .FilmTicket.js.kate-swp  CMakeLists.txt  FilmTicket.js  TicketServer.cpp  TicketServer.h  main.cpp
ticket_server/database/: TicketsDatabase.cpp  TicketsDatabase.h
ticket_server/network/: Connection.cpp  Connection.h
ticket_server/unit_test/: Connection_Test.cpp  Connection_Test.h  ServerTestMain.cpp  ServerTestMain.h  TicketsDatabase_Test.cpp  TicketsDatabase_Test.h
tools/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  DataStructures.h  NetworkStructures.cpp  NetworkStructures.h
tools/unit_test/: DataProcessor_Test.cpp  DataProcessor_Test.h  DataStructures_Test.cpp  DataStructures_Test.h  NetworkStructures_Test.cpp  NetworkStructures_Test.h  ToolsTestMain.cpp  ToolsTestMain.h
